syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.kin.bigdata.grpc.demo.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

service Greeter {
    rpc sayHello (HelloRequest) returns (HelloReply) {}
    rpc sayMore (HelloRequest) returns (stream HelloReply) {}
    rpc sayLittle (stream HelloRequest) returns (HelloReply) {}
    rpc repeat (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string message = 1;
}

message HelloReply {
    string message = 1;
}